--- a/DemoDatabase/Base.lproj/Main.storyboard
+++ b/DemoDatabase/Base.lproj/Main.storyboard
@@ -1,7 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13122.16" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14313.18" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="LQQ-oB-xMt">
+    <device id="retina4_7" orientation="portrait">
+        <adaptation id="fullscreen"/>
+    </device>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13104.12"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14283.14"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -9,16 +12,144 @@
         <!--View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="DemoDatabase" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="Cnd-6Z-gd1">
+                                <rect key="frame" x="0.0" y="64" width="375" height="603"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <prototypes>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="PostCell" id="T8i-b2-dlU">
+                                        <rect key="frame" x="0.0" y="28" width="375" height="44"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="T8i-b2-dlU" id="DRh-dZ-cg5">
+                                            <rect key="frame" x="0.0" y="0.0" width="375" height="43.5"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                        </tableViewCellContentView>
+                                    </tableViewCell>
+                                </prototypes>
+                            </tableView>
+                        </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <constraints>
+                            <constraint firstItem="Cnd-6Z-gd1" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="NwD-Mt-gRz"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="Cnd-6Z-gd1" secondAttribute="trailing" id="RY9-7C-IGQ"/>
+                            <constraint firstItem="Cnd-6Z-gd1" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="WPx-xQ-wEj"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="Cnd-6Z-gd1" secondAttribute="bottom" id="Zlv-ae-qxx"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
+                    <navigationItem key="navigationItem" id="ucO-E5-yfB">
+                        <barButtonItem key="rightBarButtonItem" systemItem="compose" id="VPW-aE-pG4">
+                            <connections>
+                                <segue destination="pwa-TW-GO1" kind="presentation" id="TgS-6j-WED"/>
+                            </connections>
+                        </barButtonItem>
+                    </navigationItem>
+                    <connections>
+                        <outlet property="tableView" destination="Cnd-6Z-gd1" id="GId-pG-kTZ"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="1076" y="133.5832083958021"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="iSL-Lx-syM">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="LQQ-oB-xMt" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="3wp-kM-phy">
+                        <rect key="frame" x="0.0" y="20" width="375" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="BYZ-38-t0r" kind="relationship" relationship="rootViewController" id="TKz-l8-grW"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Pzn-na-Yse" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="133.59999999999999" y="792.95352323838085"/>
+        </scene>
+        <!--Post View Controller-->
+        <scene sceneID="mOH-vV-QMr">
+            <objects>
+                <viewController id="pwa-TW-GO1" customClass="PostViewController" customModule="DemoDatabase" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="ohT-KL-T5j">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <navigationBar contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="sZy-ri-dCs">
+                                <rect key="frame" x="0.0" y="20" width="375" height="44"/>
+                                <items>
+                                    <navigationItem title="Title" id="3Bm-sh-CHD">
+                                        <barButtonItem key="leftBarButtonItem" systemItem="trash" id="ovQ-aC-R7D">
+                                            <connections>
+                                                <action selector="cancelPost:" destination="pwa-TW-GO1" id="3Pi-Xm-5IP"/>
+                                            </connections>
+                                        </barButtonItem>
+                                        <barButtonItem key="rightBarButtonItem" systemItem="add" id="BWu-Ec-1ah">
+                                            <connections>
+                                                <action selector="addPost:" destination="pwa-TW-GO1" id="7XR-Jq-ltq"/>
+                                            </connections>
+                                        </barButtonItem>
+                                    </navigationItem>
+                                </items>
+                            </navigationBar>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Title" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="LrL-Qe-axx">
+                                <rect key="frame" x="10" y="84" width="34" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Description" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="qBb-32-P8r">
+                                <rect key="frame" x="10" y="134" width="88" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="gxg-V1-qol">
+                                <rect key="frame" x="49" y="84" width="321" height="30"/>
+                                <nil key="textColor"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
+                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="PmY-MO-aRf">
+                                <rect key="frame" x="103" y="134" width="267" height="30"/>
+                                <nil key="textColor"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
+                        </subviews>
+                        <color key="backgroundColor" red="0.84585492227979275" green="0.84585492227979275" blue="0.84585492227979275" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <constraints>
+                            <constraint firstItem="ji3-7k-hyF" firstAttribute="trailing" secondItem="gxg-V1-qol" secondAttribute="trailing" constant="5" id="6eY-cb-fDp"/>
+                            <constraint firstItem="sZy-ri-dCs" firstAttribute="leading" secondItem="ji3-7k-hyF" secondAttribute="leading" id="956-1D-ahM"/>
+                            <constraint firstItem="qBb-32-P8r" firstAttribute="leading" secondItem="ji3-7k-hyF" secondAttribute="leading" constant="10" id="ALl-IN-lct"/>
+                            <constraint firstItem="sZy-ri-dCs" firstAttribute="top" secondItem="ji3-7k-hyF" secondAttribute="top" id="Abe-E2-bE5"/>
+                            <constraint firstItem="LrL-Qe-axx" firstAttribute="top" secondItem="sZy-ri-dCs" secondAttribute="bottom" constant="20" id="D9J-a5-YRq"/>
+                            <constraint firstItem="ji3-7k-hyF" firstAttribute="trailing" secondItem="PmY-MO-aRf" secondAttribute="trailing" constant="5" id="LiB-HP-8cj"/>
+                            <constraint firstItem="qBb-32-P8r" firstAttribute="top" secondItem="gxg-V1-qol" secondAttribute="bottom" constant="20" id="W7h-GR-XK1"/>
+                            <constraint firstItem="gxg-V1-qol" firstAttribute="top" secondItem="sZy-ri-dCs" secondAttribute="bottom" constant="20" id="aYP-UM-Epz"/>
+                            <constraint firstItem="gxg-V1-qol" firstAttribute="leading" secondItem="LrL-Qe-axx" secondAttribute="trailing" constant="5" id="dxa-K6-Bsg"/>
+                            <constraint firstItem="LrL-Qe-axx" firstAttribute="leading" secondItem="ji3-7k-hyF" secondAttribute="leading" constant="10" id="gQI-MI-xSK"/>
+                            <constraint firstItem="PmY-MO-aRf" firstAttribute="leading" secondItem="qBb-32-P8r" secondAttribute="trailing" constant="5" id="iEc-Ea-JN3"/>
+                            <constraint firstItem="sZy-ri-dCs" firstAttribute="trailing" secondItem="ji3-7k-hyF" secondAttribute="trailing" id="p05-uZ-9z5"/>
+                            <constraint firstItem="PmY-MO-aRf" firstAttribute="top" secondItem="gxg-V1-qol" secondAttribute="bottom" constant="20" id="wSn-RJ-kcG"/>
+                        </constraints>
+                        <viewLayoutGuide key="safeArea" id="ji3-7k-hyF"/>
+                    </view>
+                    <connections>
+                        <outlet property="descText" destination="PmY-MO-aRf" id="AE8-qN-xQQ"/>
+                        <outlet property="titleText" destination="gxg-V1-qol" id="Pzf-gI-map"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="rp0-iJ-uAy" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1028" y="869"/>
         </scene>
     </scenes>
 </document>
